--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/common.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Duy Dang CV</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <!-- Meta Data -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="address=no">
+  <meta name="theme-color" content="#000000" />
+  <meta charset="utf-8" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/styles/style.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/styles/style-dark.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/demo/style-demo.css">
+
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/common.css"/> -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Duy Dang CV</title>
+</head>
+
+<body class="bg-triangles">
+  <!-- Preloader -->
+  <div class="preloader">
+    <div class="preloader__wrap">
+      <div class="circle-pulse">
+        <div class="circle-pulse__1"></div>
+        <div class="circle-pulse__2"></div>
+      </div>
+      <div class="preloader__progress"><span></span></div>
+    </div>
+  </div>
+
+  <div id='root' class="main"></div>
+
+  <!-- Demo Menu -->
+  <div class="btnSlideNav slideOpen"></div>
+  <div class="btnSlideNav slideClose"></div>
+  <div class="slideNav">
+    <ul class="list-unstyled">
+      <li class="slideNav__item rtl-mode">
+        <h4 class="title title--5">More pages</h4> <a href="#">RTL</a>
+      </li>
+      <li class="slideNav__item"><a href="#">Module 1</a></li>
+      <li class="slideNav__item"><a href="#">Module 2</a></li>
+      <li class="slideNav__item"><a href="#">Module 3</a></li>
+    </ul>
+    <a href="#" class="btn">ACB</a>
+  </div>
+  <div class="overlay-slideNav"></div>
+  <!-- Demo Menu -->
+
+  <!-- JavaScripts -->
+  <script src="..\assets\js\jquery-3.4.1.min.js"></script>
+  <script src="..\assets\js\plugins.min.js"></script>
+  <script src="..\assets\js\common.js"></script>
+
+  <script src="..\assets\demo\plugins-demo.js"></script>
+</body>
+
 </html>
